[package]
name = "monitor_work_area"
version = "0.1.0"
edition = "2021"

[features]
tauri = []

[dependencies]
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }


[target.'cfg(feature = "webp")'.dependencies]
tauri = "^2"


[target.'cfg(target_os = "linux")'.dependencies]
gdk = "0.18.2"
gtk = "0.18.2"
glib = "0.20.9"
xcb = "0.9"
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.26.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60.0", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
windows-core = "0.60.0"
